[project]
name = "neosapien-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-google-genai>=2.1.1",
    "langchain-openai>=0.3.9",
    "langgraph>=0.3.18",
    "pylint>=3.3.6",
    "python-dotenv>=1.0.1",
    "ruff>=0.11.2",
    "streamlit>=1.43.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
